Adding rabbit config and consumer

--- a/applications/consumer-ai-sink/src/main/resources/application.yml
+++ b/applications/consumer-ai-sink/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 0
 spring:
+  application:
+    name: "consumer-ai-sink"
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
