--- a/applications/web-ai-app/src/main/resources/application.yml
+++ b/applications/web-ai-app/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: "web-ai-app"
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
