--- a/applications/consumer-ai-sink/pom.xml
+++ b/applications/consumer-ai-sink/pom.xml
@@ -181,7 +181,10 @@
 			<artifactId>nyla.solutions.core</artifactId>
 			<version>2.2.2-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
