--- a/applications/consumer-ai-sink/src/main/resources/application.yml
+++ b/applications/consumer-ai-sink/src/main/resources/application.yml
@@ -12,6 +12,27 @@ spring:
         index-type: HNSW
         distance-type: COSINE_DISTANCE
         dimensions: 100
+  cloud:
+    function:
+      definition: letterConsumer
+    stream:
+      bindings:
+        letterConsumer-in-0:
+          destination: letters
+          group: consumer-ai-sink
+          consumer:
+            concurrency: 1
+      rabbit:
+        bindings:
+          letterConsumer-in-0:
+            consumer:
+#              queueNameGroupOnly: true
+#              container-type: stream
+              autoBindDlq: true
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
 ai:
   model.word.vector.path: "/Users/Projects/PlayGround/ai-ml/deeplearning4j/dev/deeplearning4j-examples/dl4j-examples/src/runtime/data/GoogleNews-vectors-negative300.bin.gz"
   vector.similarity.search.threshold: 0.000003
