--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>applications/consumer-ai-sink</module>
         <module>applications/dl4j-ai-service</module>
         <module>applications/web-ai-app</module>
+        <module>applications/dl4j-ml-pipeline</module>
     </modules>
     <build>
         <pluginManagement>
