--- a/applications/consumer-ai-sink/src/main/resources/application.yml
+++ b/applications/consumer-ai-sink/src/main/resources/application.yml
@@ -35,5 +35,7 @@ spring:
       ddl-auto: update
     show-sql: true
 ai:
-  model.word.vector.path: "/Users/Projects/PlayGround/ai-ml/deeplearning4j/dev/deeplearning4j-examples/dl4j-examples/src/runtime/data/GoogleNews-vectors-negative300.bin.gz"
+  model:
+    word.vector.path: "/Users/Projects/PlayGround/ai-ml/deeplearning4j/dev/deeplearning4j-examples/dl4j-examples/src/runtime/data/GoogleNews-vectors-negative300.bin.gz"
+    uri: "http://localhost:8091/dl4jWord2Vectors"
   vector.similarity.search.threshold: 0.000003
