--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>components/domains</module>
         <module>components/ai-ml-services</module>
+        <module>components/ai-dl4j-services</module>
+        <module>applications/sentiment-ai-processor</module>
         <module>applications/consumer-ai-sink</module>
         <module>applications/dl4j-ai-service</module>
         <module>applications/web-ai-app</module>
