--- a/applications/dl4j-ai-service/src/main/resources/application.yml
+++ b/applications/dl4j-ai-service/src/main/resources/application.yml
@@ -3,10 +3,18 @@ server:
 spring:
   application:
     name: dl4j-ai-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
   ai.vectorstore.pgvector:
     dimensions: 100
   cloud:
     function:
-      definition: dl4jWord2Vectors;
+      definition: dl4jWord2Vectors;d4lLetterSentiment
+      http:
+        POST: dl4jWord2Vectors;d4lLetterSentiment
 ai:
   model.word.vector.path: "/Users/Projects/PlayGround/ai-ml/deeplearning4j/dev/deeplearning4j-examples/dl4j-examples/src/runtime/data/GoogleNews-vectors-negative300.bin.gz"
+  mode:
+    file:
+      path: "/Users/Projects/solutions/AI-ML/dev/real-time-AI-ML-event-streaming/runtime/models/movies.model"
