--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>applications/sentiment-ai-processor</module>
         <module>applications/consumer-ai-sink</module>
         <module>applications/dl4j-ai-service</module>
+        <module>applications/standford-ai-service</module>
         <module>applications/web-ai-app</module>
         <module>applications/dl4j-ml-pipeline</module>
     </modules>
