--- a/applications/sentiment-ai-processor/pom.xml
+++ b/applications/sentiment-ai-processor/pom.xml
@@ -77,7 +77,14 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- ========================= -->
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<!-- ============================ -->
 		<!-- https://mvnrepository.com/artifact/com.github.nyla-solutions/nyla.solutions.core -->
 		<dependency>
@@ -95,6 +102,11 @@
 			<artifactId>spring-cloud-stream-test-binder</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>realtime.ai.ml.event.streaming</groupId>
+            <artifactId>ai-postgresml-services</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
