--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>components/ai-ml-services</module>
         <module>components/ai-dl4j-services</module>
         <module>components/ai-stanford-nlp-services</module>
+        <module>components/ai-postgresml-services</module>
         <module>applications/sentiment-ai-processor</module>
         <module>applications/consumer-ai-sink</module>
         <module>applications/dl4j-ai-service</module>
