--- a/applications/consumer-ai-sink/pom.xml
+++ b/applications/consumer-ai-sink/pom.xml
@@ -109,13 +109,17 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- ========================= -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 
 		<!-- ============================ -->
 		<!-- https://mvnrepository.com/artifact/com.github.nyla-solutions/nyla.solutions.core -->
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
-			<version>2.2.2-SNAPSHOT</version>
+			<version>2.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
