--- a/applications/dl4j-ai-service/pom.xml
+++ b/applications/dl4j-ai-service/pom.xml
@@ -150,7 +150,7 @@
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
-			<version>2.2.2-SNAPSHOT</version>
+			<version>2.2.2</version>
 		</dependency>
 
 		<dependency>
