--- a/applications/web-ai-app/pom.xml
+++ b/applications/web-ai-app/pom.xml
@@ -26,6 +26,10 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-transformers-spring-boot-starter</artifactId>
 		</dependency>
@@ -111,7 +115,7 @@
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
-			<version>2.2.2-SNAPSHOT</version>
+			<version>2.2.2</version>
 		</dependency>
 
 		<dependency>
