--- a/components/ai-ml-services/pom.xml
+++ b/components/ai-ml-services/pom.xml
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
-			<version>2.2.2-SNAPSHOT</version>
+			<version>2.2.2</version>
 		</dependency>
 
 		<dependency>
