--- a/applications/web-ai-app/pom.xml
+++ b/applications/web-ai-app/pom.xml
@@ -30,6 +30,15 @@
 			<artifactId>spring-ai-transformers-spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>realtime.ai.ml.event.streaming</groupId>
 			<artifactId>domains</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
