--- a/components/ai-ml-services/pom.xml
+++ b/components/ai-ml-services/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>realtime.ai.ml.event.streaming</groupId>
@@ -15,8 +15,8 @@
 	<description>ai-ml-services</description>
 	<properties>
 		<java.version>17</java.version>
-		<spring-ai.version>1.0.0-M1</spring-ai.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-ai.version>1.0.0</spring-ai.version>
+		<spring-cloud.version>2024.0.1</spring-cloud.version>
 		<dl4j-root.version>1.0.0-M2.1</dl4j-root.version>
 		<dl4j-master.version>1.0.0-M2.1</dl4j-master.version>
 		<jcommon.version>1.0.23</jcommon.version>
@@ -25,6 +25,14 @@
 		<javacv.version>1.5.5</javacv.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-advisors-vector-store</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-starter-model-transformers</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -37,14 +45,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.ai</groupId>-->
-<!--			<artifactId>spring-ai-pgvector-store-spring-boot-starter</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.ai</groupId>-->
-<!--			<artifactId>spring-ai-retry</artifactId>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-stream</artifactId>
@@ -78,7 +78,7 @@
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
-			<version>2.2.2-SNAPSHOT</version>
+			<version>2.2.2</version>
 		</dependency>
 
 		<dependency>
@@ -91,18 +91,14 @@
 			<artifactId>spring-cloud-stream-test-binder</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-starter-vector-store-pgvector</artifactId>
+		</dependency>
+		<dependency>
             <groupId>realtime.ai.ml.event.streaming</groupId>
             <artifactId>domains</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-core</artifactId>
-		</dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-transformers</artifactId>
         </dependency>
     </dependencies>
 	<dependencyManagement>
@@ -141,14 +137,6 @@
 		</plugins>
 	</build>
 	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
 		<repository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
