Adding rabbitmq plugins

--- a/applications/consumer-ai-sink/src/main/resources/application.yml
+++ b/applications/consumer-ai-sink/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: "consumer-ai-sink"
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/postgresml
     username: postgres
   ai:
     vectorstore:
@@ -12,6 +12,7 @@ spring:
         index-type: HNSW
         distance-type: COSINE_DISTANCE
         dimensions: 384
+        initialize-schema: true
   cloud:
     function:
       definition: letterConsumer
