adding freemarker for mult web apps

--- a/applications/web-ai-app/pom.xml
+++ b/applications/web-ai-app/pom.xml
@@ -115,8 +115,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- ============================ -->
-		<!-- https://mvnrepository.com/artifact/com.github.nyla-solutions/nyla.solutions.core -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.github.nyla-solutions</groupId>
 			<artifactId>nyla.solutions.core</artifactId>
