--- a/applications/web-ai-app/pom.xml
+++ b/applications/web-ai-app/pom.xml
@@ -22,7 +22,7 @@
 		<jcommon.version>1.0.23</jcommon.version>
 		<jfreechart.version>1.0.13</jfreechart.version>
 		<nd4j.backend>nd4j-native</nd4j.backend>
-		<javacv.version>1.5.5</javacv.version>
+<!--		<javacv.version>1.5.5</javacv.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -172,27 +172,27 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>daily</updatePolicy>  <!-- Optional, update daily -->
-			</snapshots>
-		</repository>
-	</repositories>
+<!--	<repositories>-->
+<!--		<repository>-->
+<!--			<id>spring-milestones</id>-->
+<!--			<name>Spring Milestones</name>-->
+<!--			<url>https://repo.spring.io/milestone</url>-->
+<!--			<snapshots>-->
+<!--				<enabled>false</enabled>-->
+<!--			</snapshots>-->
+<!--		</repository>-->
+<!--		<repository>-->
+<!--			<id>sonatype-nexus-snapshots</id>-->
+<!--			<name>Sonatype Nexus Snapshots</name>-->
+<!--			<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+<!--			<releases>-->
+<!--				<enabled>false</enabled>-->
+<!--			</releases>-->
+<!--			<snapshots>-->
+<!--				<enabled>true</enabled>-->
+<!--				<updatePolicy>daily</updatePolicy>  &lt;!&ndash; Optional, update daily &ndash;&gt;-->
+<!--			</snapshots>-->
+<!--		</repository>-->
+<!--	</repositories>-->
 
 </project>
